--- a/src/sass/_common-style.scss
+++ b/src/sass/_common-style.scss
@@ -43,7 +43,7 @@ p {
 .app-card {
    top: 50%;
    bottom: 50%;
-   background: rgba($color: #fff, $alpha: 0.5);
+   background-color: rgba($color: #fff, $alpha: 0.5);
    width: 400px;
    border-radius: 10px;
    overflow: hidden;
